--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Build and prepare for Pages 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           sh ./make
-          echo "k3t.xyz" > docs/CNAME
+          echo "nolongerkai.dev" > docs/CNAME
           echo "include: [".well-known"]" > docs/_config.yml
 
       - name: Deploy 🚀
